<resources>
    <string name="WorldSelectorActivity">WorldSelectorActivity</string>
    <string name="_class">Class</string>
    <string name="_continue">Continue</string>
    <string name="_import">Import</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="academy">Academy</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="activate">Activate</string>
    <string name="age">Age</string>
    <string name="age_point">Age Point</string>
    <string name="all">All</string>
    <string name="alliance">Alliance</string>
    <string name="alliance_invitations">Alliance Invitations</string>
    <string name="alliance_leader">Alliance Leader</string>
    <string name="alliance_name_min_max">Alliance name must be 6 to 15 characters!</string>
    <string name="alliance_wall_rule">Any verbal abuse about a player or an alliance in the wall description is a reason to be banned permanently.</string>
    <string name="alliances">Alliances</string>
    <string name="amount">Amount</string>
    <string name="animations">Animations</string>
    <string name="api_key">2468</string>
    <string name="app_name">War Kingdoms</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="armageddon">Armageddon</string>
    <string name="armageddon_coming">Armageddon is coming</string>
    <string name="armageddon_description">Armageddon description</string>
    <string name="armageddon_signs_desc">All signs must be met to start Armageddon</string>
    <string name="armies">Armies</string>
    <string name="army">Army</string>
    <string name="assistant_leader">Assistant Leader</string>
    <string name="attack_this_place">Attack this Place</string>
    <string name="attacker">Attacker</string>
    <string name="barracks">Barracks</string>
    <string name="block_user">Block User</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="bonus">Bonus</string>
    <string name="booty">Booty</string>
    <string name="bought">bought</string>
    <string name="bringer_of_armageddon">Bringer of Armageddon</string>
    <string name="bringer_of_armageddon_desc">The one who killed maximum number of warriors</string>
    <string name="build_embassy">Build Embassy</string>
    <string name="building_capacity">Building capacity</string>
    <string name="building_is_busy">Building is busy</string>
    <string name="buildings">Buildings</string>
    <string name="buy_diamond">Buy Diamond</string>
    <string name="buy_resource">Buy Resource</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_request">Cancel request</string>
    <string name="capacity">Capacity</string>
    <string name="castle">Castle</string>
    <string name="casualties">Casualties</string>
    <string name="casualty_details">Casualty Details</string>
    <string name="cavalry_attack">Cavalry Attack</string>
    <string name="challenge_the_world">Challenge the world</string>
    <string name="change_username_only_once">You can change your username only once</string>
    <string name="character_max">Maximum 300 Characters</string>
    <string name="charge">Charge</string>
    <string name="choose_your_payment_method">Choose your payment method</string>
    <string name="cities">Cities</string>
    <string name="cities_owned">Cities Owned</string>
    <string name="city">City</string>
    <string name="city_wall">City Wall</string>
    <string name="citydiamonds">2 diamonds/hour</string>
    <string name="click_challenge_the_world">Click challenge the world button to start the countdown. You need to protect your trade road for 72 hours. If you can keep your trade road for 72 hours after challenging the world, you win, game ends and server closes!</string>
    <string name="collect_award">You can collect your speacial awards every %s hours</string>
    <string name="colonies">Colonies</string>
    <string name="colony">Colony</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_now">Complete Now</string>
    <string name="congratulations">Congratulations</string>
    <string name="connection_error">Connection Error!</string>
    <string name="conquer_a_city_from_someroad_to_prevent_victory">Conquer a city from %s to prevent their victory.</string>
    <string name="conquer_a_trade_road">Conquer a trade road to challenge the world. To conquer a trade road, you need to conquer all cities on it.</string>
    <string name="conqueror">CONQUEROR</string>
    <string name="conqueror_assistant">CONQUEROR ASSISTANT</string>
    <string name="conquerors">CONQUERORS</string>
    <string name="copied">Copied</string>
    <string name="copy">Copy</string>
    <string name="cost">Cost</string>
    <string name="create">Create</string>
    <string name="create_alliance">Create New Alliance</string>
    <string name="current_gain">Current gain</string>
    <string name="current_offers">Current Offers</string>
    <string name="daily_deads">Daily Deads</string>
    <string name="de_de">Deutsch</string>
    <string name="default_world">World 5</string>
    <string name="defeat">Defeat</string>
    <string name="defender_in_protection">Kingdom is in protection mode.</string>
    <string name="defenders">Defenders</string>
    <string name="defense_power">Defense power</string>
    <string name="defensive_building">Defensive Building</string>
    <string name="delete">Delete</string>
    <string name="deploy_100_units">Deploy 100 units for maximum gain</string>
    <string name="details">Details</string>
    <string name="diamond">diamond</string>
    <string name="diamond_transfer">Diamond Transfer</string>
    <string name="diamond_transfer_desc1">You can transfer your remaining diamonds from ended worlds.</string>
    <string name="diamond_transfer_desc2">Only purchased diamonds can be transferred.</string>
    <string name="discharge">Discharge</string>
    <string name="dismiss">Dismiss</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="economy">Economy</string>
    <string name="edit">Edit</string>
    <string name="embassies">Embassies</string>
    <string name="embassy_news">Embassy News</string>
    <string name="en_us">English</string>
    <string name="enter">ENTER</string>
    <string name="enter_amount_to_sell">Enter amount to sell:</string>
    <string name="enter_player_name">Enter Player Name</string>
    <string name="enter_positive_numeric_values">Enter positive numeric values!</string>
    <string name="enter_unit_price">Enter unit price:</string>
    <string name="es_es">Español</string>
    <string name="establish_a_colony">Establish Colony</string>
    <string name="establish_your_colony_and_gain_more_golds">Establish your colony and gain more golds</string>
    <string name="export">Export</string>
    <string name="export_spies">Export Spies</string>
    <string name="export_units">Export Units</string>
    <string name="gold_road">Gold</string>
    <string name="iron_road">Iron</string>
    <string name="pearl_road">Pearl</string>
    <string name="royal_road">Royal</string>
    <string name="silk_road">Silk</string>
    <string name="spice_road">Spice</string>
</resources>