<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/TopView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/TopViewL" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <kingdom.strategy.war.customViews.WkLinearLayout android:orientation="vertical" android:id="@id/RootView" android:background="@drawable/bg_page" android:layout_width="fill_parent" android:layout_height="fill_parent" custom:wkPaddingBottom="1h" custom:wkPaddingLeft="3w" custom:wkPaddingRight="3w" custom:wkPaddingTop="4h">
            <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <kingdom.strategy.war.customViews.WkRelativeLayout android:layout_gravity="center_horizontal" android:id="@id/minimap" android:background="@drawable/minimap512" android:layout_width="fill_parent" android:layout_height="fill_parent" custom:wkHeight="90w" custom:wkMarginBottom="2w" custom:wkWidth="90w" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <kingdom.strategy.war.customViews.WkTextView android:gravity="center" android:id="@id/textView13" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" custom:wkHeight="3h" custom:wkWidth="45w" style="@style/SmallContentTextStyle" />
                        <kingdom.strategy.war.customViews.WkLinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/textView13" android:layout_alignParentLeft="true" custom:wkMargin="2w" custom:wkPadding="2w" style="@style/WrapperStyle">
                            <kingdom.strategy.war.customViews.WkLinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:wkMarginRight="4w">
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/iron_road" android:gravity="center" android:id="@id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/iron_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/gold_road" android:gravity="center" android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gold_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/gray_1" android:gravity="center" android:id="@id/textView3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/silk_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                                <kingdom.strategy.war.customViews.WkTextView android:gravity="center" android:id="@id/textView15" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                            </kingdom.strategy.war.customViews.WkLinearLayout>
                            <kingdom.strategy.war.customViews.WkLinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" custom:wkMarginRight="2w">
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/pearl_road" android:gravity="center" android:id="@id/textView4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pearl_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/royal_road" android:gravity="center" android:id="@id/textView5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/royal_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                                <kingdom.strategy.war.customViews.WkTextView android:textColor="@color/spice_road" android:gravity="center" android:id="@id/textView6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/spice_road" custom:wkHeight="5h" custom:wkWidth="17w" style="@style/CountdownTextStyle" />
                            </kingdom.strategy.war.customViews.WkLinearLayout>
                        </kingdom.strategy.war.customViews.WkLinearLayout>
                        <kingdom.strategy.war.customViews.WkTextView android:gravity="center" android:id="@id/textView14" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentRight="true" custom:wkHeight="3h" custom:wkWidth="50w" style="@style/SmallContentTextStyle" />
                        <kingdom.strategy.war.customViews.WkRelativeLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/textView14" android:layout_alignParentRight="true" custom:wkHeight="17h" custom:wkMargin="2w" custom:wkPadding="2w" custom:wkWidth="45w" style="@style/WrapperStyle">
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center_vertical" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" custom:wkHeight="5h" custom:wkPaddingLeft="2w" custom:wkPaddingRight="4w" custom:wkWidth="35w" style="@style/CountdownTextStyle" />
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center|right" android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentTop="true" android:layout_alignParentRight="true" custom:wkHeight="5h" custom:wkPaddingRight="2w" custom:wkWidth="10w" style="@style/CountdownTextStyle" />
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center_vertical" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentLeft="true" android:layout_centerVertical="true" custom:wkHeight="5h" custom:wkPaddingLeft="2w" custom:wkPaddingRight="4w" custom:wkWidth="35w" style="@style/CountdownTextStyle" />
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center|right" android:id="@id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentRight="true" android:layout_centerVertical="true" custom:wkHeight="5h" custom:wkPaddingRight="2w" custom:wkWidth="10w" style="@style/CountdownTextStyle" />
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center_vertical" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" custom:wkHeight="5h" custom:wkPaddingLeft="2w" custom:wkPaddingRight="4w" custom:wkWidth="35w" style="@style/CountdownTextStyle" />
                            <kingdom.strategy.war.customViews.WkTextView android:gravity="center|right" android:id="@id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="-" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" custom:wkHeight="5h" custom:wkPaddingRight="2w" custom:wkWidth="10w" style="@style/CountdownTextStyle" />
                        </kingdom.strategy.war.customViews.WkRelativeLayout>
                    </RelativeLayout>
                </LinearLayout>
            </ScrollView>
        </kingdom.strategy.war.customViews.WkLinearLayout>
    </LinearLayout>
</RelativeLayout>